# RUL-Fast-API

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
Models/: feature_scaler.joblib  linear_regression_rul.joblib  lr_rul_pipeline.joblib
Notebooks/: Training_evaluation.ipynb
RULService/: __init__.py
RULService/Model/: __init__.py  rul.py
RULService/RULObject/: RULObject.py  __init__.py
RULService/Test/: test.py
RULService/api/: rulapi.py
Scripts/: Predict.py  Train.py
