[project]
name = "rul-fast-api"
version = "0.1.0"
description = "RUL Prediction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
    "pandas>=2.0.0",
    "joblib>=1.3.0",
]

#libraries for production
[dependency-groups]
dev = [
    "requests>=2.32.5",
]
